<resources>
    <string name="app_name">IrishRoadShare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept_passenger">Accept Passenger</string>
    <string name="deny_passenger">Deny Passenger</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="log_in">Log in</string>
    <string name="road_gif">Road gif</string>
    <string name="botton_to_message_activity">Botton to message activity</string>
    <string name="button_to_post_trip_activity">button to post trip activity</string>
    <string name="button_to_search_trip_activity">button to search trip activity</string>
    <string name="hello_user">Hello, User!</string>
    <string name="post_trip">Post Trip</string>
    <string name="additional_comments_optional">Additional comments (optional)</string>
    <string name="license_plate_will_not_be_publicly_displayed_for_security_reasons">License plate (will not be publicly displayed, for security reasons)</string>
    <string name="car_model">Car model</string>
    <string name="car_make">Car make</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="smoking_allowed">Smoking allowed</string>
    <string name="luggage_size">Luggage size</string>
    <string name="price_per_passenger">Price per passenger</string>
    <string name="available_seats">Available seats</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="request_this_trip">Request this trip</string>
    <string name="_1">1</string>
    <string name="how_many_seats_would_you_like_to_book">How many seats would you like to book?</string>
    <string name="sign_up">Sign up</string>
    <string name="arrow">→</string>
    <string name="trip_date">Date</string>
    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="seats">Seats:</string>
    <string name="price">Price:</string>
    <string name="driver">Driver:</string>
    <string name="request_accepted">Request accepted.</string>
    <string name="request_denied">Request denied.</string>
    <string name="you_have_denied_this_passenger">You have denied this passenger.</string>
    <string name="error_updating_trip_request_status">Error updating trip request status</string>
    <string name="denypassenger_method_called">denyPassenger method called</string>
    <string name="error_updating_trip_request_tatus">Error updating trip request status</string>
    <string name="acceptpassenger_method_called">acceptPassenger method called</string>
    <string name="no_documents_returned_from_firestore">No documents returned from Firestore</string>
    <string name="listen_failed">Listen failed.</string>
    <string name="hello_s">HELLO, %s!</string>
    <string name="listen_failedd">Listen failed.</string>
    <string name="no_such_document">No such document</string>
    <string name="get_failed_with">"get failed with "</string>
    <string name="search_destination">Search destination</string>
    <string name="search_departure">Search departure</string>
    <string name="API_key">AIzaSyDagxyAch91-wbJbpvLWcjhJIQY-6rZ6Fw</string>
    <string name="error_getting_documents">Error getting documents.</string>
    <string name="To">" to "</string>
    <string name="small_luggage">Small luggage</string>
    <string name="medium_luggage">Medium luggage</string>
    <string name="APYkey"><![CDATA[&key=AIzaSyDagxyAch91-wbJbpvLWcjhJIQY-6rZ6Fw]]></string>
    <string name="https_maps_googleapis_com_maps_api_directions">https://maps.googleapis.com/maps/api/directions/</string>
    <string name="exception_downloading">Exception downloading</string>
    <string name="select_departure">Select departure</string>
    <string name="select_destination">Select destination</string>
</resources>