<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/background_gif"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/road_gif" />


    <ImageButton
        android:id="@+id/btnMessages"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/message_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/botton_to_message_activity" />

    <ImageButton
        android:id="@+id/btnPostTrip"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/post_icon"
        app:layout_constraintBottom_toTopOf="@id/btnMessages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/button_to_post_trip_activity" />

    <ImageButton
        android:id="@+id/btnSearchTrip"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toTopOf="@id/btnPostTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/button_to_search_trip_activity" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/hello_user"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnSearchTrip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>