<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:background="@drawable/custom_background">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_date"
        android:textColor="@android:color/holo_purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/time"
        android:textColor="@android:color/holo_purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/purple_city_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/to"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departure" />

    <TextView
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/purple_city_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to" />

    <TextView
        android:id="@+id/seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seats"
        android:textSize="16sp"
        android:textColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/destination"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/seatsAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cyan"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/seats"
        app:layout_constraintTop_toBottomOf="@id/destination" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/destination"
        app:layout_constraintStart_toEndOf="@id/seatsAvailable"
        app:layout_constraintEnd_toStartOf="@+id/priceValue"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/cyan"
        app:layout_constraintTop_toBottomOf="@id/destination"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:textSize="16sp"
        android:textColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/seats"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/cyan"
        app:layout_constraintTop_toBottomOf="@id/seats"
        app:layout_constraintStart_toEndOf="@id/driver"/>

</androidx.constraintlayout.widget.ConstraintLayout>